navbar text alignment fixing

--- a/src/App.css
+++ b/src/App.css
@@ -574,6 +574,10 @@ nav.navbar .menuText {
   padding-right: 50px;
 }
 
+.myCommunities h2 {
+  color: rgb(255, 56, 103);
+}
+
 .myCommunities p {
   vertical-align: text-top;
   padding-bottom: 65px;
